--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "portfolioapi",
   "version": "1.0.0",
   "description": "Rest API for the portfolio",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "cz"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/vinicastelani/portolio.git"
+    "url": "git+ssh://git@github.com/vinicastelani/portolioAPI.git"
   },
   "keywords": [
     "vinicius",
@@ -36,5 +36,15 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
+    "vercel": "^20.1.2"
   }
 }
