feat: fixed vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
     "name": "serverapi",
     "version": 2,
     "env": {
-        "MONGODB_URI": "@server-uri"
+        "MONGODB_URI": "mongodb+srv://vinicastelani:vini110297@cluster0.pbsys.mongodb.net/cluster0?retryWrites=true&w=majority"
     }
 }
