--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,7 +1,13 @@
 {
     "name": "serverapi",
     "version": 2,
-    "env": {
+    "builds": [
+        {"src": "*.js", "use": "@now/node-server"}
+    ],
+    "routes": [
+        {"src": "(.*)", "dest": "./index.js"}
+    ],
+     "env": {
         "MONGODB_URI": "@server-uri"
     }
 }
