fix: fixed vercel json

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -8,6 +8,8 @@
         {"src": "(.*)", "dest": "./index.js"}
     ],
      "env": {
-        "MONGODB_URI": "@server-uri"
+        "MONGODB_URI": "@server-uri",
+        "DB_USERNAME":"vinicastelani",
+        "DB_PASSWORD":"vini110297"
     }
 }
