--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/vinicastelani/portolioAPI#readme",
   "devDependencies": {
+    "@vercel/node": "^1.8.4",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.0"
   },
