--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,7 +4,7 @@
     "builds": [
         {
             "src": "*.js",
-            "use": "@vercel/node-server"
+            "use": "@now/node-server"
         }
     ],
     "routes": [
