fix: vercel config

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -9,7 +9,7 @@
     ],
     "routes": [
         {
-            "src": "(.*)",
+            "src": "/session/",
             "dest": "./index.js"
         }
     ],
