--- a/api/vercel.json
+++ b/api/vercel.json
@@ -10,7 +10,7 @@
     "routes": [
         {
             "src": "/session/*",
-            "dest": "./index.js"
+            "dest": "/index.js"
         }
     ],
     "env": {
